lab5_helm_chart_version1/guestbook/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  rules:
  - host: frontend.minikube.test
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend
            port: 
              number: 80
  - host: backend.minikube.test
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: backend
            port:
              number: 80
